<resources>
    <string name="app_name">Football Match</string>

    <string name="away_logo">Away Logo</string>
    <string name="home_logo">Home Logo</string>
    <string name="league_logo">League Logo</string>
    <string name="prev_match">Prev Match</string>
    <string name="next_match">Next Match</string>
    <string name="goal_details">Goal Details</string>
    <string name="shoots">Shoots</string>
    <string name="formation">Formation</string>
    <string name="score">Score</string>
    <string name="ft">FT</string>
    <string name="match_name">Match Name</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove_from_favorite">Remove From Favorite</string>
    <string name="favorite_match">Favorite Match</string>
    <string name="not_found_image">Not Found Image</string>
    <string name="match_added">Match Added to Favorite</string>
    <string name="match_removed">Match Removed from Favorite</string>
    <string name="team_list">Team List</string>
    <string name="logo_teams">Logo Teams</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="league">League :</string>
    <string name="formed_year">Formed Year :</string>
    <string name="description">Description :</string>
    <string name="team_info">Team Info</string>
    <string name="match">Match</string>
    <string name="players">Players</string>
    <string name="standings">Standings</string>
    <string name="played">Played :</string>
    <string name="goals">Goals</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="loss">Loss</string>
    <string name="total">Total</string>
    <string name="favorite">Favorite</string>
    <string name="team">Team</string>

    <string-array name="spinner_item">
        <item>Match Name</item>
        <item>Team Name</item>
    </string-array>
</resources>
