<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.match.detail.DetailMatchFragment">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/card">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="91dp"
                    android:layout_height="99dp"
                    android:src="@drawable/ic_trophy"
                    android:id="@+id/home_image_card_detail_match"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/home_card_detail_match"
                    android:contentDescription="@string/home_logo"/>

            <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="91dp"
                    android:layout_height="91dp"
                    android:src="@drawable/ic_trophy"
                    android:id="@+id/away_image_card_detail_match"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/away_card_detail_match"
                    android:contentDescription="@string/away_logo"/>

            <TextView
                    android:textStyle="bold"
                    tools:text="Home Team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/home_card_detail_match"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    android:textStyle="bold"
                    tools:text="Away Team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/away_card_detail_match"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    tools:text="8 : 8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="46sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/score_card_detail_match"
                    app:layout_constraintEnd_toStartOf="@+id/away_image_card_detail_match"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@+id/home_image_card_detail_match"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
            tools:text="Event Name"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/event_detail_match"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            style="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintTop_toBottomOf="@+id/card"/>

    <ImageView
            android:scaleType="fitXY"
            android:layout_width="91dp"
            android:layout_height="91dp"
            android:src="@drawable/ic_trophy"
            android:id="@+id/home_image_detail_match"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/league_detail_match"
            android:contentDescription="@string/home_logo"/>

    <ImageView
            android:scaleType="fitXY"
            android:layout_width="91dp"
            android:layout_height="91dp"
            android:src="@drawable/ic_trophy"
            android:id="@+id/away_image_detail_match"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/league_detail_match"
            android:contentDescription="@string/away_logo"/>

    <TextView
            android:textStyle="bold"
            tools:text="Away Team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/away_detail_match"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/away_image_detail_match"/>

    <TextView
            android:text="@string/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/home_detail_match"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            tools:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/league_detail_match"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/event_detail_match"/>

    <TextView
            android:text="@string/formation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/shoots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/goal_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"/>

    <TextView
            tools:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_score_detail_match"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/home_detail_match"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView9"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            tools:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/away_score_detail_match"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/away_detail_match"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
            tools:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_formation_detail_match"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/home_score_detail_match"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            tools:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/away_formation_detail_match"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/away_score_detail_match"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
            tools:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_shoots_detail_match"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/home_formation_detail_match"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            tools:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/away_shoots_detail_match"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/away_formation_detail_match"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
            android:id="@+id/home_goald_detail_match"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_favorite_detail_match"
            app:layout_constraintEnd_toStartOf="@+id/textView14"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_shoots_detail_match"
            tools:text="TextView" />

    <TextView
            android:id="@+id/away_goald_detail_match"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="end"
            app:layout_constraintBottom_toTopOf="@+id/btn_favorite_detail_match"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/away_shoots_detail_match"
            tools:text="TextView" />

    <TextView
            android:textStyle="bold"
            tools:text="Home Team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_detail_match"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/home_image_detail_match"/>

    <Button
            android:id="@+id/btn_favorite_detail_match"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_button"
            android:text="@string/add_to_favorite"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>